This has a whole bunch of minor UI fixes to account for problems on mobile platforms, as well as a few browser-specific issues.

--- a/themes/truefit/css/einetwork.css
+++ b/themes/truefit/css/einetwork.css
@@ -187,6 +187,8 @@ fa {
 }
 @media only screen and (max-width: 599px) {
     .registerBody{max-width:400px;margin:auto}
+    .btn-wide{padding:8px 20px}
+    .pagination > li > a, .pagination > li > span{padding:2px 6px;min-width:30px}
 }
 
 .accordionButtonsLeft{margin-right:-1px;margin-top:10px}
@@ -197,6 +199,9 @@ fa {
 .form-inline{display:inline}
 
 .floatR{float:right}
+@media only screen and (max-width: 599px) {
+    .bulkFloat{float:left; width:50%}
+}
 
 .expand{display:block;overflow:hidden;padding:0 5px}
 
@@ -307,6 +312,10 @@ input:-webkit-autofill {-webkit-box-shadow: 0 0 0 1000px white inset;}
 .checkToggleOff,.facetToggleOff{display:none}
 .facetOffset1{padding-left:30px}
 .facetOffset2{padding-left:60px}
+@media only screen and (max-width: 599px) {
+  .facetOffset1{padding-left:15px}
+  .facetOffset2{padding-left:30px}
+}
 @media only screen and (min-width: 768px) {
   .panel-facetAccordion{border:0;border-radius:0;text-align:left;margin:0px}
   .resultsRightBar{border-left:1px solid #949494}
